[package]
name = "geolineo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conf_from_env = "0.1.0"
dotenv = "0.15.0"

geoleo = {path = "geoleo"}
rocket = {version="0.5.0-rc.2", features = ["json"]}

rocket_dyn_templates={version = "0.1.0-rc.1", features = ["handlebars", "tera"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
itertools = "0.10"


