[package]
name = "geoleo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest="0.16.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
libm = "0.2.6"
geojson="0.24.0"
walkdir = "2"

tracing = "0.1"
